@@ -1,9 +1,8 @@
-
 # ERRONKA · Bermeoko Udala
 ## Galduen eta aurkituen kudeaketa-sistema
 
-> Ekosistema osoa edukiontzietan: datu-basea, JavaFX aplikazioa eta web atari publikoa.
-> Komando bakar batekin abiarazten da: `git clone [url] && docker compose up`
+> Ekosistema osoa edukiontzietan: datu-basea, JavaFX aplikazioa eta web atari publikoa.  
+> Komando bakar batekin abiarazten da: `git clone [url] && docker compose up -d`
 
 ---
 
@@ -14,36 +13,47 @@
 3. [Aurretiko eskakizunak](#aurretiko-eskakizunak)
 4. [Abiaraztea Linux-en](#abiaraztea-linux-en)
 5. [Abiaraztea Windows-en](#abiaraztea-windows-en)
-6. [Sarbideak eta kredentzialak](#sarbideak-eta-kredentzialak)
-7. [Erabilera arrunta](#erabilera-arrunta)
-8. [Datu-basea](#datu-basea)
-9. [Karpeta-egitura eta Errubrika](#karpeta-egitura-eta-errubrika)
-10. [Arazoen ebazpena](#arazoen-ebazpena)
-11. [Egileak](#egileak)
+6. [JavaFX aplikazioa natiboa sortu](#javafx-aplikazioa-natiboa-sortu)
+7. [Sarbideak eta kredentzialak](#sarbideak-eta-kredentzialak)
+8. [Erabilera arrunta](#erabilera-arrunta)
+9. [Datu-basea](#datu-basea)
+10. [Karpeta-egitura](#karpeta-egitura)
+11. [Errubrika-mapa](#errubrika-mapa)
+12. [Arazoen ebazpena](#arazoen-ebazpena)
+13. [Egileak](#egileak)
 
 ---
 
 ## Proiektuaren deskripzioa
 
-**Erronka** Bermeoko Udalaren galdu eta aurkitutako objektuak kudeatzeko sistema bat da. Bi sarbide ditu:
+**Erronka** Bermeoko Udalaren galdu eta aurkitutako objektuak kudeatzeko sistema integratua da. Bi sarbide ditu:
 
-- **JavaFX aplikazio bat** Langileentzat (back-office) — objektuak erregistratu, kokatu, jabeari eman, erreklamazioak balioztatu, etab.
-- **Web atari publiko bat** herritarrentzat (front-office) — aurkitutako objektuen katalogoa kontsultatu eta galera-erreklamazioak bidali.
+- **JavaFX aplikazio bat** langileentzat (back-office): objektuak erregistratu, kokatu, jabeari eman, erreklamazioak balioztatu, bat-etortzeak bilatu, iraungitakoak kudeatu…
+- **Web atari publiko bat** herritarrentzat (front-office): aurkitutako objektuen katalogoa kontsultatu eta galera-erreklamazioak bidali.
 
-Datu-base bat partekatzen dute (MariaDB), eta XML fitxategien bidez ere komunikatzen dira: JavaFX-ek artikuluen XML-ak esportatzen ditu eta webguneak haiek kontsumitzen ditu.
+Datu-base bat partekatzen dute (MariaDB). JavaFX-ek artikuluen XML-ak esportatzen ditu eta webguneak haiek kontsumitzen ditu.
 
-### Funtzionalitate nagusiak
+### Funtzionalitate nagusiak — JavaFX
 
-- Galdutako objektuen CRUD osoa (sortu, ikusi, editatu, ezabatu)
-- Kokalekuak gehi BHA (bolumen handikoak) kudeatu
-- Jabe eta erakundeen kudeaketa
-- Emanaldien sinadurak eta dokumentuak gorde
-- XML inportazio/esportazioa, XSD eta DTD bidez balioztatuta
-- Web atari responsive-a (mugikorra, tableta, mahaigaina)
-- Modu iluna (jasangarritasuna)
-- Datu-baseko rolak eta segurtasuna
-- Audit trail (mugimenduen historia)
-- Trigger eta stored procedure-ak
+| Atalean | Zer egiten den |
+|---------|----------------|
+| **Erregistroa** | Artikulu berriak sartu: kategoria, kokalekua, argazkia, aurkitzailearen datuak, iraungikorra/ez |
+| **Inbentarioa** | Artikulu guztiak ikusi + filtratu (izena, kategoria, egoera). Editatu, ezabatu, argazkia ikusi |
+| **Emanaldia** | Artikulua jabeari edo erakundeari entregatu. Sinadura-dokumentua gorde |
+| **Erreklamazioak** | Herritarren galera-erreklamazioak ikusi. Bat-etortze posibleak automatikoki erakutsi |
+| **Galdu dabenak** | Erreklamazio berriak sortu. Filtratutako zerrenda ikusi |
+| **Iraungitakoak** | 2 urteko epea igaro duten artikuluak. Aurkitzaileari edo erakundeari eskaini |
+| **Auditoria** | Ekintza guztien historia. CSV-ra esportatu |
+| **Admin panela** | Langileak, kategoriak, kokalekuak kudeatu. Datu-basearen backup egin |
+| **Offline modua** | DB konexiorik gabe ere funtzionatzen du `store.dat` fitxategiarekin |
+
+### Funtzionalitate nagusiak — Web
+
+- Katalogo responsive-a (mugikorra, tableta, mahaigaina)
+- XML fitxategiak bistaratu (XSD + DTD balioztatuta)
+- XSLT eraldaketa (XML → XHTML)
+- Erreklamazio-formularioa JavaScript balidazioarekin
+- Modu iluna
 
 ---
 
@@ -61,7 +71,7 @@ Datu-base bat partekatzen dute (MariaDB), eta XML fitxategien bidez ere komunika
   └────────┬─────────┘         └────────┬─────────┘
            │                            │
            │      ┌──────────────┐      │
-           └─────▶│   MariaDB    │◀─────┘
+           └─────►│   MariaDB    │◄─────┘
                   │  Port: 3306  │
                   └──────┬───────┘
                          │
@@ -71,8 +81,9 @@ Datu-base bat partekatzen dute (MariaDB), eta XML fitxategien bidez ere komunika
                   └──────────────┘
 
   Fitxategi-trukea:
-    ./partekatutako_datuak/artikuluak.xml  (Java idatzi → Web irakurri)
-    ./artikulu_irudiak/                    (Java + Web partekatzen dute)
+    ./partekatutako_datuak/artikuluak.xml  ← Java idatzi, Web irakurri
+    ./artikulu_irudiak/                    ← Java + Web partekatzen dute
+    ~/.erronka-bermeo/store.dat            ← Offline cache (bakoitzaren makinan)
 ```
 
 | Zerbitzua | Irudia | Portua | Funtzioa |
@@ -82,144 +93,108 @@ Datu-base bat partekatzen dute (MariaDB), eta XML fitxategien bidez ere komunika
 | `web` | nginx:alpine | 8000 | Web atari publikoa |
 | `adminer` | adminer:latest | 8081 | BD-aren web UI |
 
+### JavaFX MVC patroia
+
+```
+src/main/java/
+├── app/          → Launcher (fat JAR sarrera), Main (JavaFX Application)
+├── controller/   → FXML kontrolatzaileak (MVC: C)
+├── model/        → Eredu-klaseak — Hartzailea (abstraktoa), Jabea, Erakundea,
+│                   Artikulua, Langilea, Administratzailea, Erreklamazioa…
+├── dao/          → Datu-basera sarbidea (CRUD)
+├── utils/        → DBKonexioa, AppConfig, BiltegiLokala, LogKudeatzailea,
+│                   XMLExportazioa, XMLInportazioa, InsertLogailea, UIKudeatzailea
+└── view/         → FXML leihoak + style.css (MVC: V)
+```
+
 ---
 
-## Karpeta-egitura eta Errubrika
+## Aurretiko eskakizunak
 
-```
-erronka-bermeo/
-│
-├── 📁 db/                          ← DATU_BASEAK: Script-ak
-│   └── init/
-│       ├── 01-schema.sql           ← Diseinu fisikoa + Triggerrak + Prozedurak
-│       ├── 02-roles.sql            ← Rolak eta erabiltzaileak (segurtasuna)
-│       └── 03-seed.sql             ← Datu-lagin adierazgarriak
-│
-├── 📁 java-app/                    ← PROGRAMAZIOA: JavaFX aplikazioa
-│   ├── Dockerfile
-│   ├── pom.xml
-│   └── src/main/java/
-│       ├── app/                    ← Launcher, Main
-│       ├── controller/             ← MVC: kontrolatzaileak
-│       ├── DAO/                    ← Datu-basera sarbidea (CRUD)
-│       ├── model/                  ← MVC: eredu-klaseak (herentzia, abstraktoa)
-│       ├── utils/                  ← DB konexioa, XML, log laguntzaileak
-│       └── view/                   ← MVC: FXML leihoak + style.css
-│
-├── 📁 frontend/                    ← MARKA_LENGOAIA: Web ataria
-│   ├── index.html                  ← Orri nagusia (responsive, Bootstrap)
-│   ├── css/                        ← Estilo-orriak
-│   ├── js/                         ← JavaScript funtzioak (balidazioa)
-│   ├── html/                       ← Orri osagarriak
-│   ├── datuak/                     ← Java-tik jasotako XML-ak
-│   ├── xml/                        ← XML fitxategiak + XSD + DTD
-│   ├── xslt/                       ← XSLT eraldaketak (XML → XHTML)
-│   ├── xpath/                      ← XPath kontsultak (web scraping)
-│   └── xquery/                     ← XQuery kontsultak
-│
-├── 📁 dokumentazioa/               ← Dokumentazio guztia moduluz modul
-│   ├── GarapenIngurunea/           ← GARAPEN_INGURUNEA: Diagramak
-│   │   ├── KlaseDiagrama.cld       ← Klase-diagrama
-│   │   ├── UseCaseDiagrama.ucd     ← Erabilera-kasuen diagrama
-│   │   └── SekuentziaDiagrama.sqd  ← Sekuentzi-diagrama
-│   ├── DatuBaseak/                 ← DATU_BASEAK: Diseinu dokumentazioa
-│   │   ├── diseinu_kontzeptuala/   ← E-R diagramak (banakakoak + taldekoa)
-│   │   └── diseinu_logikoa/        ← Eskema erlazionala (banakakoak + taldekoa)
-│   ├── Programazioa/               ← Mockup-a, eskuliburua
-│   ├── MarkaLengoaia/              ← Web mockup-a, eskuliburua, Bootstrap zerrenda
-│   ├── Digitalizazioa/             ← Dashboard, datuen bizi-zikloa
-│   └── Jasangarritasuna/           ← Auditoretza eta jasangarritasun txostena
-│
-├── 📁 Eranskinak/                  ← Taldeko dokumentuak
-│   ├── ERANSKIN1_TaldearenKontratoa.pdf
-│   ├── ERANSKIN2_Parametroak.pdf
-│   ├── ERANSKIN3_Proposamena.docx
-│   └── ERANSKIN4_PlanifikazioaEtaKontrolPuntuak.docx
-│
-├── 📁 partekatutako_datuak/        ← XML fitxategiak (Java → Web)
-├── 📁 artikulu_irudiak/            ← Objektuen argazkiak
-│
-├── docker-compose.yml              ← DIGITALIZAZIOA: Linux orkestrazioa
-├── docker-compose.windows.yml      ← Windows orkestrazioa
-├── start-linux.sh / stop-linux.sh
-└── start-windows.bat / stop-windows.bat
-```
-
-### Errubrika-mapa
-
-| Modulua | Errubrika-irizpidea | Kokalekua |
-|---------|---------------------|-----------|
-| **GARAPEN_INGURUNEA** | GitHub biltegia + commit historia | Repo osoa |
-| | Test unitarioak (≥4 mota) | `java-app/src/test/` |
-| | Log fitxategiak (saio + errore) | `java-app/src/main/java/utils/` |
-| | Javadoc | `java-app/src/main/java/**` |
-| | Klase-diagrama | `dokumentazioa/GarapenIngurunea/KlaseDiagrama.cld` |
-| | Erabilera-kasuen diagrama | `dokumentazioa/GarapenIngurunea/UseCaseDiagrama.ucd` |
-| | Sekuentzi-diagrama | `dokumentazioa/GarapenIngurunea/SekuentziaDiagrama.sqd` |
-| **DATU_BASEAK** | Diseinu fisikoa (SQL script-a) | `db/init/01-schema.sql` |
-| | SELECT / INSERT / UPDATE / DELETE | `db/init/01-schema.sql` |
-| | Trigger-ak (DELETE + UPDATE) | `db/init/01-schema.sql` |
-| | Prozedura gordea | `db/init/01-schema.sql` |
-| | Diseinu kontzeptuala (banakakoa + taldekoa) | `dokumentazioa/DatuBaseak/diseinu_kontzeptuala/` |
-| | Diseinu logikoa (banakakoa + taldekoa) | `dokumentazioa/DatuBaseak/diseinu_logikoa/` |
-| | Rolak eta erabiltzaileak | `db/init/02-roles.sql` |
-| | Urruneko atzigarritasuna (Docker) | `docker-compose.yml` |
-| **PROGRAMAZIOA** | CRUD + DB konexioa | `java-app/src/main/java/DAO/` |
-| | MVC patroia | `java-app/src/main/java/{controller,model,view}/` |
-| | Herentzia + klase abstraktoa | `java-app/src/main/java/model/` |
-| | Salbuespenak (ohikoa + pertsonalizatua) | `java-app/src/main/java/` |
-| | ArrayList + datu-egitura dinamikoak | `java-app/src/main/java/` |
-| | XML fitxategien kudeaketa | `java-app/src/main/java/utils/` |
-| | Fitxategi bitarrak (backup) | `java-app/src/main/java/utils/` |
-| | Swing/JavaFX leihoak | `java-app/src/main/java/view/` |
-| | Aplikazioaren mockup-a | `dokumentazioa/Programazioa/` |
-| | Erabiltzailearen eskuliburua | `dokumentazioa/Programazioa/` |
-| **MARKA_LENGOAIA** | HTML + CSS + JS (responsive) | `frontend/` |
-| | Bootstrap osagaiak | `frontend/index.html` |
-| | XML fitxategiak + XSD + DTD | `frontend/xml/` |
-| | XSLT eraldaketa (XML → XHTML) | `frontend/xslt/` |
-| | XPath kontsultak (web scraping) | `frontend/xpath/` |
-| | XQuery kontsultak | `frontend/xquery/` |
-| | Web mockup-a (mugikorra) | `dokumentazioa/MarkaLengoaia/` |
-| | Erabiltzailearen eskuliburua | `dokumentazioa/MarkaLengoaia/` |
-| **DIGITALIZAZIOA** | Dockerizazioa (3 edukiontzi) | `docker-compose.yml` |
-| | Dashboard | `dokumentazioa/Digitalizazioa/` |
-| | Datuen bizi-zikloaren analisia | `dokumentazioa/Digitalizazioa/` |
-| | Teknologia proposamena | `dokumentazioa/Digitalizazioa/` |
-| **JASANGARRITASUNA** | Ekodiseinu-estrategiak (web) | `frontend/` |
-| | Jasangarritasun-auditoretza | `dokumentazioa/Jasangarritasuna/` |
-| | Kodearen mantentze-erraztasuna | `dokumentazioa/Jasangarritasuna/` |
+| Sistema | Eskakizuna |
+|---------|------------|
+| **Linux** | `docker` + `docker compose` |
+| **Windows** | [Docker Desktop](https://www.docker.com/products/docker-desktop/) |
 
 ---
 
 ## Abiaraztea Linux-en
 
 ```bash
-# Lehen aldiz
+# Lehen aldiz — baimenak eman
 chmod +x start-linux.sh stop-linux.sh
 
-# Abiarazi
+# Abiarazi (Docker behar da)
 ./start-linux.sh
 
-# JavaFX aplikazioa nabigatzailean:
+# JavaFX aplikazioa nabigatzailean (noVNC)
 # http://localhost:6080/vnc.html?autoconnect=1&resize=scale
+
+# Web ataria
+# http://localhost:8000
 
 # Geldiarazi
 ./stop-linux.sh
 ```
 
+---
+
 ## Abiaraztea Windows-en
 
-1. **Docker Desktop** ireki eta itxaron prest egon arte
+1. **Docker Desktop** ireki eta prest egon arte itxaron
 2. `start-windows.bat` exekutatu (bi klik)
-3. Nabigatzailean ireki: **http://localhost:6080/vnc.html?autoconnect=1&resize=scale**
+3. Nabigatzailean ireki:
+   - JavaFX: **http://localhost:6080/vnc.html?autoconnect=1&resize=scale**
+   - Web: **http://localhost:8000**
 
-> VcXsrv edo X server beharrik ez — JavaFX nabigatzailean (noVNC) irekitzen da.
+> VcXsrv edo X server beharrik gabe — JavaFX nabigatzailean (noVNC) irekitzen da.
 
-### Aurretiko eskakizunak
+---
 
-**Linux:** `docker`, `docker-compose`
-**Windows:** [Docker Desktop](https://www.docker.com/products/docker-desktop/) soilik
+## JavaFX aplikazioa natiboa sortu
+
+Docker gabe exekutatzeko, binario natiboa sortu daiteke.  
+**DB konexioa:** `localhost:3306` behar da (Docker martxan egon behar da).
+
+### Linux — binario natiboa (JVM bundled)
+
+```bash
+cd java-app
+mvn package
+
+# App-image sortu
+JAVAFX=$(find ~/.m2/repository/org/openjfx -name "*linux*.jar" ! -name "*sources*" | tr '\n' ':' | sed 's/:$//')
+jpackage \
+  --input target \
+  --main-jar galdutakoak-1.0-SNAPSHOT.jar \
+  --main-class app.Launcher \
+  --module-path "$JAVAFX" \
+  --add-modules javafx.controls,javafx.fxml \
+  --name galdutakoak \
+  --type app-image \
+  --dest target
+
+# Exekutatu
+target/galdutakoak/bin/galdutakoak
+```
+
+### Windows — .exe instalatzailea
+
+Windows makinan Java 21 JDK eta Maven instalatuta egon behar dira.  
+`build-windows.bat` fitxategia exekutatu (bi klik):
+
+```
+java-app/build-windows.bat
+```
+
+`target\Galdutakoak-1.0.exe` sortuko da — JVM barne darama, ez du Java instalatuta behar.
+
+### JAR soilik (Java instalatuta behar du)
+
+```bash
+# Linux / Windows (Java 21 JDK behar du)
+java -jar target/galdutakoak-1.0-SNAPSHOT.jar
+```
 
 ---
 
@@ -228,134 +203,23 @@ chmod +x start-linux.sh stop-linux.sh
 | Zerbitzua | URL | Erabiltzailea | Pasahitza |
 |-----------|-----|---------------|-----------|
 | Web ataria | http://localhost:8000 | — | — |
-| Adminer (BD UI) | http://localhost:8081 | `admin` | `admin123` |
-| BD zuzena | localhost:3306 | `admin` | `admin123` |
+| Adminer | http://localhost:8081 | `admin` | `admin123` |
+| DB zuzena | localhost:3306 | `admin` | `admin123` |
 
 **Adminer konfigurazioa:**
-- **Sistema:** MySQL
-- **Server:** `db`
-- **Datu-basea:** `erronka_galduak`
+- Sistema: `MySQL`
+- Zerbitzaria: `db`
+- Datu-basea: `erronka_galduak`
 
-> Hasierako datu-baseko erabiltzaileak `db/init/03-seed.sql` fitxategian daude.
+### JavaFX aplikazioko erabiltzaileak
 
-### Datu-basea zuzenean (terminala)
-```bash
-# Edukiontzi barrutik
-docker exec -it erronka_db mariadb -ubermeo_udaltzain -pudaltzainpw erronka_galduak
+Hasierako pasahitza guztientzat: **`1234`**
 
-# Tokiko makinatik (mariadb-client beharrezkoa)
-mariadb -h 127.0.0.1 -P 3306 -ubermeo_udaltzain -pudaltzainpw erronka_galduak
-
-#Bi pertsona aldi berean:
-
-GitHub + Docker lokala bakoitzarentzat fluxu estandarra da.
-
-- --
-Hasierako setupa
-
-cd/home/ygarrido/Dokumentuak/ERRONKA_ZORNOTZA/erronka/erronka-bermeo
-git init
-git add.
-git commit -m "first commit"
-git remote add origin https://github.com/TU_USUARIO/galdutakoak.git
-git push -u origin main
-
-- --
-Zure lankidea (bere makina)
-
-git clone https://github.com/TU_USUARIO/galdutakoak.git
-cd galdutakoak
-docker compose up -d
-
-Bakoitzak bere Docker propioa du lokalean BD berarekin korrika.
-
-- --
-Eguneroko lan-fluxua
-
-Hasi aurretik beti:
-git pull
-
-Zerbait amaitzean:
-git add.
-git commit – "egin nuenaren deskribapena"
-git push
-
-Besteak aldaketak jasotzen ditu:
-git pull
-
-- --
-Bestearen lana ez zapaltzeko — adarrak
-
-#Zure lankideak bere adarrean lan egiten du
-git checkout -b feature/login-controller
-
-Zu zurean.
-git checkout -b feature/xml-export
-
-Amaitzen duzuenean, jaitsi.
-git checkout main
-git merge feature/login-controller
-git push
-
-- --
-Benetako arazoa: datu-basea
-
-Bakoitzak bere BD dauka Dockerren — datuak ez dira makinen artean sinkronizatzen. Zertarako
-lerrokatuta egotea, schema aldatzen bada:
-
-#Aldatzen duenak 01-schema.sql egiten du:
-git add db/init/01-schema.sql
-git commit -m "schema: gehitu X eremua"
-git push
-
-#Besteak aldaketa jasotzen du eta BD edukiontzia berrabiarazten du:
-git pull
-docker compose down -v #borra bolumena datu zaharrekin
-docker compose up -d #birsortu schema berriarekin
-
-- v flag-ak datuak ezabatzen ditu — abisatu schema aldaketak egiten dituzuenean.
-
-- --
-Laburbilduz: GitHub-ek kodea sinkronizatzen du, Dockerrek bakoitzak lokalean exekutatzen du. Ez da "
-bizirik "milisegundora, baina git pull/push-rekin ohikoa da
-klase-proiektua.
-- --
-Nola funtzionatzen duen
-
-Zure makina ---- Makina kidea
-─────────────────────┐       ┌──────────────────────┐
-  │ docker compose up   │       │ Solo el código Java   │
-  │  ├── MariaDB :3306 ◄├───────┤ DB_URL=TU_IP:3306     │
-  │  ├── Adminer :8081  │       │ git push/pull normal  │
-  │  └── Nginx   :8000  │       └──────────────────────┘
-  └─────────────────────┘
-
-
-Zure lagunak ez du Docker altxatzen — apuntatu zuzenean zure datu-basean.
-
-- --
-1. urratsa — Zure IP lokala
-
-ip addr show | grep "inet" | grep -v 127.0.0.1
-#Adibidea: 192.168.1.45
-
-- --
-2. urratsa — Ireki MariaDB lankideari
-
-3306 portua ikusgai dago jada zure docker-compose.yml. webgunean. Zure firewall-a behar duzu.
-zilegi bekit:
-
-sudo ufw allow 3306
-
-- --
-3. urratsa — Zure lankideak bere .env edo aldagarria aldatzen du
-
-Bere makinan, localhost erabili beharrean, erabili zure IP:
-
-#Zure terminalean Java aplikazioa abiarazi aurretik:
-export DB_URL = jdbc: mariadb:// 192.168.1.45: 3306/erronka
-
-```
+| Izena | Erabiltzailea | Rola |
+|-------|--------------|------|
+| Miren Agirre | `admin` | Administratzailea |
+| Jon Zabala | `langile1` | Langilea |
+| Ander Txurru | `ikusle1` | Ikuslea (irakurketa soilik) |
 
 ---
 
@@ -366,275 +230,240 @@ export DB_URL = jdbc: mariadb:// 192.168.1.45: 3306/erronka
 docker compose ps
 ```
 
-### Logak ikusi (denak)
+### Logak jarraitu
 ```bash
-docker compose logs -f
+docker compose logs -f          # Denak
+docker compose logs -f java-app # JavaFX soilik
+docker compose logs -f db       # DB soilik
 ```
 
-### Logak ikusi (zerbitzu bat)
+### JavaFX log fitxategia (tokian)
 ```bash
-docker compose logs -f java-app
-docker compose logs -f db
-docker compose logs -f web
-```
-
-### JavaFX aplikazioaren log fitxategia
-Aplikazioak ekintza guztiak gordetzen ditu (`logs/app-0.log`):
-```bash
-# Bizirik jarraitu
+# Linux
 tail -f logs/app-0.log
-
-# Erroreak soilik
 grep "SEVERE\|WARNING" logs/app-0.log
+
+# Windows
+# proiektua_karpeta\logs\app-0.log
 ```
-**Windows-en:** proiektuaren karpeta → `logs\app-0.log`
+
+### INSERT log fitxategia
+```bash
+cat partekatutako_datuak/insert_log.txt
+```
 
 ### Zerbitzu bat berreraiki (kodea aldatu ondoren)
 ```bash
 docker compose up --build java-app
 ```
 
-### Datu-basearen segurtasun-kopia (backup)
+### Datu-basearen backup manuala
 ```bash
 docker exec erronka_db mariadb-dump \
-  -ubermeo_udaltzain -pudaltzainpw erronka_galduak \
-  > kopia_$(date +%Y%m%d).sql
+  -uadmin -padmin123 erronka_galduak \
+  > backup_$(date +%Y%m%d).sql
 ```
 
-### Backup-a kargatu
+### Backup bat kargatu
 ```bash
 docker exec -i erronka_db mariadb \
-  -ubermeo_udaltzain -pudaltzainpw erronka_galduak \
-  < kopia_20260421.sql
+  -uadmin -padmin123 erronka_galduak \
+  < backup_20260421.sql
 ```
 
-### Edukiontzi baten barrura sartu
+### Datu-basea hutsetik berrabiarazi
 ```bash
-docker exec -it erronka_db bash
-docker exec -it erronka_desktop bash
+docker compose down -v   # KONTUZ: datuak ezabatzen dira
+./start-linux.sh
 ```
 
 ---
 
 ## Datu-basea
 
+### Hasieratze-fitxategiak
+
+`db/init/` karpetako fitxategiak automatikoki exekutatzen dira edukiontzia **lehen aldiz** abiaraztean:
+
+| Fitxategia | Edukia |
+|------------|--------|
+| `01-schema.sql` | Taula guztiak sortu |
+| `02-roles.sql` | Rolak eta DB erabiltzaileak |
+| `03-seed.sql` | Hasierako datuak |
+| `04-trigger.sql` | UPDATE + DELETE triggerrak |
+| `05-procedures.sql` | Gordetako prozedurak |
+
 ### Taula nagusiak
 
 | Taula | Deskripzioa |
 |-------|-------------|
-| `rola` | Erabiltzaile-rolak (admin, langilea, bezeroa) |
-| `langilea` | Udaltzaingoko langileak |
-| `kategoria` | Objektuen sailkapena |
-| `kokalekua` | Biltegiko kokapenak (A-001 ... G-006 + BHA) |
-| `hartzailea` | Jabea/erakundearen super-entitatea |
-| `jabea` | Pertsona fisikoa (espezializazioa) |
-| `erakundea` | Erakunde juridikoa (espezializazioa) |
-| `artikulua` | Galdutako objektua |
-| `erreklamazioa` | Herritarren erreklamazioak |
-| `emanaldia` | Objektuaren entrega |
-| `mugimendua` | Audit trail |
-| `jakinarazpena` | Abisuak jabeei |
+| `ROLA` | Erabiltzaile-rolak |
+| `LANGILEA` | Udaleko langileak |
+| `KATEGORIA` | Objektuen sailkapena |
+| `KOKALEKUA` | Biltegiko kokapenak (BHA barne) |
+| `HARTZAILEA` | Jabea/erakundearen entitate nagusia |
+| `JABEA` | Pertsona fisikoa (HARTZAILEA azpiklase) |
+| `ERAKUNDEA` | Erakunde juridikoa (HARTZAILEA azpiklase) |
+| `AURKITZAILEA` | Objektua aurkitu zuen pertsona |
+| `ARTIKULUA` | Galdutako objektua |
+| `ERREKLAMAZIOA` | Herritarren erreklamazioak |
+| `EMANALDIA` | Objektuaren entrega jabearentzat |
+| `MUGIMENDUA` | Audit trail (ekintza guztiak) |
+| `JAKINARAZPENA` | Abisuak |
 
-### Rolak (segurtasuna)
+### DB rolak
 
-| Rola | Eskumenak | Erabiltzailea (DB) |
-|------|-----------|---------------|
-| `admin_rola` | Guztia | `admin` |
-| `langile_rola` | CRUD osoa (LANGILEA/ROLA irakurketa soilik) | `langile1` |
-| `ikusle_rola` | Artikuluak erregistratu soilik | `ikusle1` |
-
-**Aplikazioko erabiltzaileak (hasierako seed, pasahitza: `1234`):**
-
-| Izena | Erabiltzailea | Rola |
-|-------|--------------|------|
-| Miren Agirre | `admin` | Administratzailea |
-| Jon Zabala | `langile1` | Langilea |
-| Ander Txurru | `ikusle1` | Ikuslea |
-
-### Hasieratze-fitxategiak
-
-`db/init/` karpetan dauden `.sql` fitxategi guztiak automatikoki exekutatzen dira edukiontzia LEHEN aldiz abiaraztean (alfabetiko ordenan):
-
-- `01-schema.sql` — taulen egitura
-- `02-roles.sql` — rolak eta erabiltzaileak
-- `03-seed.sql` — adibidezko datuak
-
-> **Garrantzitsua:** Schema aldatu ondoren, datu-basea berrabiarazi behar da hutsetik. `docker compose down -v` exekutatu eta gero `./start-linux.sh`.
+| DB Rola | Eskumenak |
+|---------|-----------|
+| `admin_rola` | Guztia |
+| `langile_rola` | CRUD osoa (LANGILEA/ROLA irakurketa soilik) |
+| `ikusle_rola` | Artikuluak erregistratu soilik |
 
 ---
 
-## Karpeta-egitura eta Errubrika
+## Karpeta-egitura
 
 ```
 erronka-bermeo/
 │
-├── 📁 db/                          ← DATU_BASEAK: Script-ak
+├──  db/
 │   └── init/
-│       ├── 01-schema.sql           ← Diseinu fisikoa + Triggerrak + Prozedurak
-│       ├── 02-roles.sql            ← Rolak eta erabiltzaileak (segurtasuna)
-│       └── 03-seed.sql             ← Datu-lagin adierazgarriak
+│       ├── 01-schema.sql          ← Taula guztiak
+│       ├── 02-roles.sql           ← Rolak eta DB erabiltzaileak
+│       ├── 03-seed.sql            ← Hasierako datuak
+│       ├── 04-trigger.sql         ← Triggerrak (UPDATE + DELETE)
+│       └── 05-procedures.sql      ← Gordetako prozedurak
 │
-├── 📁 java-app/                    ← PROGRAMAZIOA: JavaFX aplikazioa
+├──  java-app/
 │   ├── Dockerfile
 │   ├── pom.xml
+│   ├── build-windows.bat          ← Windows .exe sortzeko scripta
 │   └── src/main/java/
-│       ├── app/                    ← Launcher, Main
-│       ├── controller/             ← MVC: kontrolatzaileak
-│       ├── DAO/                    ← Datu-basera sarbidea (CRUD)
-│       ├── model/                  ← MVC: eredu-klaseak (herentzia, abstraktoa)
-│       ├── utils/                  ← DB konexioa, XML, log laguntzaileak
-│       └── view/                   ← MVC: FXML leihoak + style.css
+│       ├── app/                   ← Launcher, Main
+│       ├── controller/            ← MVC kontrolatzaileak (23 klase)
+│       ├── dao/                   ← CRUD (ArtikuluaDAO, LangileaDAO…)
+│       ├── model/                 ← Eredu-klaseak (Hartzailea abstraktoa)
+│       ├── utils/                 ← Laguntzaileak (DB, XML, Log, Offline)
+│       └── view/                  ← FXML + style.css (23 pantaila)
 │
-├── 📁 frontend/                    ← MARKA_LENGOAIA: Web ataria
-│   ├── index.html                  ← Orri nagusia (responsive, Bootstrap)
-│   ├── css/                        ← Estilo-orriak
-│   ├── js/                         ← JavaScript funtzioak (balidazioa)
-│   ├── html/                       ← Orri osagarriak
-│   ├── datuak/                     ← Java-tik jasotako XML-ak
-│   ├── xml/                        ← XML fitxategiak + XSD + DTD
-│   ├── xslt/                       ← XSLT eraldaketak (XML → XHTML)
-│   ├── xpath/                      ← XPath kontsultak (web scraping)
-│   └── xquery/                     ← XQuery kontsultak
+├──  frontend/
+│   ├── index.html                 ← Orri nagusia (responsive, Bootstrap)
+│   ├── css/style.css
+│   ├── js/
+│   ├── html/
+│   ├── xml/                       ← XML + XSD + DTD
+│   ├── xslt/                      ← XSLT eraldaketak
+│   ├── xpath/                     ← XPath kontsultak
+│   └── xquery/                    ← XQuery kontsultak
 │
-├── 📁 dokumentazioa/               ← Dokumentazio guztia moduluz modul
-│   ├── GarapenIngurunea/           ← GARAPEN_INGURUNEA: Diagramak
-│   │   ├── KlaseDiagrama.cld       ← Klase-diagrama
-│   │   ├── UseCaseDiagrama.ucd     ← Erabilera-kasuen diagrama
-│   │   ├── SekuentziaDiagrama.sqd  ← Sekuentzi-diagrama
-│   │   └── Mock-Up-ak.pdf          ← Mockup-ak
-│   ├── DatuBaseak/                 ← DATU_BASEAK: Diseinu dokumentazioa
-│   │   ├── diseinu_kontzeptuala/   ← E-R diagramak (banakakoak + taldekoa)
-│   │   └── diseinu_logikoa/        ← Eskema erlazionala (banakakoak + taldekoa)
-│   ├── Programazioa/               ← Mockup-a, eskuliburua
-│   ├── MarkaLengoaia/              ← Web mockup-a, eskuliburua, Bootstrap zerrenda
-│   ├── Digitalizazioa/             ← Dashboard, datuen bizi-zikloa
-│   └── Jasangarritasuna/           ← Auditoretza eta jasangarritasun txostena
+├──  dokumentazioa/
+│   ├── GarapenIngurunea/          ← Klase, erabilera-kasu, sekuentzi diagramak
+│   ├── DatuBaseak/                ← E-R eta diseinu logikoa
+│   ├── Programazioa/              ← Mockup-a, eskuliburua
+│   ├── MarkaLengoaia/             ← Web mockup-a, eskuliburua
+│   ├── Digitalizazioa/            ← Dashboard, datuen bizi-zikloa
+│   └── Jasangarritasuna/          ← Auditoretza txostena
 │
-├── 📁 Eranskinak/                  ← Taldeko dokumentuak
-│   ├── ERANSKIN1_TaldearenKontratoa.pdf
-│   ├── ERANSKIN2_Parametroak.pdf
-│   ├── ERANSKIN3_Proposamena.docx
-│   └── ERANSKIN4_PlanifikazioaEtaKontrolPuntuak.docx
+├──  partekatutako_datuak/       ← artikuluak.xml + insert_log.txt
+├──  artikulu_irudiak/           ← Objektuen argazkiak
+├──  logs/                       ← JavaFX log fitxategiak
 │
-├── 📁 partekatutako_datuak/        ← XML fitxategiak (Java → Web)
-├── 📁 artikulu_irudiak/            ← Objektuen argazkiak
-│
-├── docker-compose.yml              ← DIGITALIZAZIOA: Linux orkestrazioa
-├── docker-compose.windows.yml      ← Windows orkestrazioa
+├── .env                           ← DB kredentzialak
+├── docker-compose.yml
 ├── start-linux.sh / stop-linux.sh
 └── start-windows.bat / stop-windows.bat
 ```
 
-### Errubrika-mapa
+---
 
-| Modulua | Errubrika-irizpidea | Kokalekua |
-|---------|---------------------|-----------|
-| **GARAPEN_INGURUNEA** | GitHub biltegia + commit historia | Repo osoa |
-| | Test unitarioak (≥4 mota) | `java-app/src/test/` |
-| | Log fitxategiak (saio + errore) | `java-app/src/main/java/utils/` |
-| | Javadoc | `java-app/src/main/java/**` |
-| | Klase-diagrama | `dokumentazioa/GarapenIngurunea/KlaseDiagrama.cld` |
-| | Erabilera-kasuen diagrama | `dokumentazioa/GarapenIngurunea/UseCaseDiagrama.ucd` |
-| | Sekuentzi-diagrama | `dokumentazioa/GarapenIngurunea/SekuentziaDiagrama.sqd` |
-| **DATU_BASEAK** | Diseinu fisikoa (SQL script-a) | `db/init/01-schema.sql` |
-| | SELECT / INSERT / UPDATE / DELETE | `db/init/01-schema.sql` |
-| | Trigger-ak (DELETE + UPDATE) | `db/init/01-schema.sql` |
-| | Prozedura gordea | `db/init/01-schema.sql` |
-| | Diseinu kontzeptuala (banakakoa + taldekoa) | `dokumentazioa/DatuBaseak/diseinu_kontzeptuala/` |
-| | Diseinu logikoa (banakakoa + taldekoa) | `dokumentazioa/DatuBaseak/diseinu_logikoa/` |
-| | Rolak eta erabiltzaileak | `db/init/02-roles.sql` |
-| | Urruneko atzigarritasuna (Docker) | `docker-compose.yml` |
-| **PROGRAMAZIOA** | CRUD + DB konexioa | `java-app/src/main/java/DAO/` |
-| | MVC patroia | `java-app/src/main/java/{controller,model,view}/` |
-| | Herentzia + klase abstraktoa | `java-app/src/main/java/model/` |
-| | Salbuespenak (ohikoa + pertsonalizatua) | `java-app/src/main/java/` |
-| | ArrayList + datu-egitura dinamikoak | `java-app/src/main/java/` |
-| | XML fitxategien kudeaketa | `java-app/src/main/java/utils/` |
-| | Fitxategi bitarrak (backup) | `java-app/src/main/java/utils/` |
-| | Swing/JavaFX leihoak | `java-app/src/main/java/view/` |
-| | Aplikazioaren mockup-a | `dokumentazioa/Programazioa/` |
-| | Erabiltzailearen eskuliburua | `dokumentazioa/Programazioa/` |
-| **MARKA_LENGOAIA** | HTML + CSS + JS (responsive) | `frontend/` |
+## Errubrika-mapa
+
+| Modulua | Irizpidea | Kokalekua |
+|---------|-----------|-----------|
+| **GARAPEN_INGURUNEA** | GitHub + commit historia | Repo osoa |
+| | ≥4 test unitario mota | `java-app/src/test/` |
+| | Saio-logak + errore-logak | `java-app/src/main/java/utils/LogKudeatzailea.java` |
+| | Properties fitxategia | `java-app/src/main/resources/application.properties` |
+| | Javadoc (@author) | `java-app/src/main/java/**` |
+| | Klase-diagrama | `dokumentazioa/GarapenIngurunea/` |
+| | Erabilera-kasuen diagrama | `dokumentazioa/GarapenIngurunea/` |
+| | Sekuentzi-diagrama | `dokumentazioa/GarapenIngurunea/` |
+| **DATU_BASEAK** | Diseinu fisikoa (SQL) | `db/init/01-schema.sql` |
+| | SELECT/INSERT/UPDATE/DELETE | `db/init/01-schema.sql` |
+| | Triggerrak (DELETE + UPDATE) | `db/init/04-trigger.sql` |
+| | Gordetako prozedura | `db/init/05-procedures.sql` |
+| | Diseinu kontzeptuala | `dokumentazioa/DatuBaseak/diseinu_kontzeptuala/` |
+| | Diseinu logikoa | `dokumentazioa/DatuBaseak/diseinu_logikoa/` |
+| | 3 rol + erabiltzaileak | `db/init/02-roles.sql` |
+| | Urruneko atzigarritasuna | `docker-compose.yml` |
+| **PROGRAMAZIOA** | DB konexioa + CRUD (≥3 taula) | `java-app/src/main/java/dao/` |
+| | MVC patroia | `controller/ + model/ + view/` |
+| | Klase abstraktoa | `model/Hartzailea.java` |
+| | Herentzia + override + metodo ez-toString | `model/Jabea.java`, `model/Erakundea.java` |
+| | Salbuespen pertsonalizatua | `utils/XMLExportazioa.java` (XMLPatroiException) |
+| | ArrayList + datu-egitura dinamikoak | `controller/KategoriakController.java` eta beste |
+| | INSERT emaitzak fitxategira | `utils/InsertLogailea.java` → `insert_log.txt` |
+| | Segurtasun-kopia (offline) | `utils/BiltegiLokala.java` |
+| | Bi erabiltzaile-modu | `utils/Sesio.java` (admin / langile) |
+| | XML kudeaketa + regex balidazioa | `utils/XMLExportazioa.java`, `utils/XMLInportazioa.java` |
+| | MVC mezuak (OK/EZ OK) | `utils/UIKudeatzailea.java` (toast sistema) |
+| | Mockup-a | `dokumentazioa/Programazioa/` |
+| | Eskuliburua | `dokumentazioa/Programazioa/` |
+| **MARKA_LENGOAIA** | HTML + CSS + JS responsive | `frontend/` |
 | | Bootstrap osagaiak | `frontend/index.html` |
-| | XML fitxategiak + XSD + DTD | `frontend/xml/` |
-| | XSLT eraldaketa (XML → XHTML) | `frontend/xslt/` |
-| | XPath kontsultak (web scraping) | `frontend/xpath/` |
+| | XML + XSD + DTD | `frontend/xml/` |
+| | XSLT (XML → XHTML) | `frontend/xslt/` |
+| | XPath kontsultak | `frontend/xpath/` |
 | | XQuery kontsultak | `frontend/xquery/` |
-| | Web mockup-a (mugikorra) | `dokumentazioa/MarkaLengoaia/` |
-| | Erabiltzailearen eskuliburua | `dokumentazioa/MarkaLengoaia/` |
-| **DIGITALIZAZIOA** | Dockerizazioa (3 edukiontzi) | `docker-compose.yml` |
+| | Web mockup mugikorra | `dokumentazioa/MarkaLengoaia/` |
+| | Eskuliburua | `dokumentazioa/MarkaLengoaia/` |
+| **DIGITALIZAZIOA** | Dockerizazioa (≥3 edukiontzi) | `docker-compose.yml` |
 | | Dashboard | `dokumentazioa/Digitalizazioa/` |
 | | Datuen bizi-zikloaren analisia | `dokumentazioa/Digitalizazioa/` |
 | | Teknologia proposamena | `dokumentazioa/Digitalizazioa/` |
-| **JASANGARRITASUNA** | Ekodiseinu-estrategiak (web) | `frontend/` |
-| | Jasangarritasun-auditoretza | `dokumentazioa/Jasangarritasuna/` |
+| **JASANGARRITASUNA** | Ekodiseinu web | `frontend/` |
+| | Auditoretza txostena | `dokumentazioa/Jasangarritasuna/` |
 | | Kodearen mantentze-erraztasuna | `dokumentazioa/Jasangarritasuna/` |
 
 ---
 
 ## Arazoen ebazpena
 
-### Linux: `xhost: command not found`
-```bash
-sudo pacman -S xorg-xhost   # Arch / CachyOS
-sudo apt install x11-xserver-utils   # Ubuntu
-```
-
-### Linux: `cannot open display`
-1. Egiaztatu `$DISPLAY` aldagaia ezarrita dagoen:
-   ```bash
-   echo $DISPLAY     # `:0` edo `:1` agertu beharko luke
-   ```
-2. Wayland erabiltzen baduzu, XWayland behar duzu:
-   ```bash
-   sudo pacman -S xorg-xwayland
-   ```
-3. `xhost +local:docker` exekutatu saio grafikoaren barruan (ez SSH bidez).
-
-### Windows: JavaFX ez da nabigatzailean agertzen
-1. Itxaron 15-20 segundo edukiontziak abiarazi ondoren.
-2. Egiaztatu URL zuzena erabiltzen ari zarela:
-   `http://localhost:6080/vnc.html?autoconnect=1&resize=scale`
-3. Edukiontzia berrabiarazi:
-   ```bat
-   docker compose restart java-app
-   ```
-4. Logak egiaztatu: `logs\app-0.log`
-
 ### `port is already allocated`
-Beste prozesu batek portua erabiltzen du. Egiaztatu zer:
 ```bash
-# Linux
+# Linux — zer darabil portua
 sudo lsof -i :3306
 # Windows
 netstat -ano | findstr :3306
 ```
-
-Geldiarazi tokiko MariaDB/MySQL-a, edo aldatu portua compose-an (`"3307:3306"` jarri).
+Geldiarazi tokiko MariaDB-a edo aldatu portua `docker-compose.yml`-an (`"3307:3306"`).
 
 ### Datu-basea ez da abiarazten
 ```bash
 docker compose logs db
+# `db_data` volume-an datu zaharrak badaude:
+docker compose down -v && ./start-linux.sh
 ```
 
-Errore ohikoenak:
-- **`db_data` volume-an datu zaharrak** → `docker compose down -v` (kontuz, datuak galtzen dira)
-- **Sintaxi-errorea SQL fitxategi batean** → log-ek lerroa adieraziko dute
-
-### Datu-basea hutsetik berrabiarazi (datuak galduz)
-```bash
-docker compose down -v
-./start-linux.sh
-```
-
-### JavaFX ezin da konektatu BD-ra
+### JavaFX ezin da konektatu DB-ra
 ```bash
 docker exec erronka_desktop env | grep DB_URL
-# Hau atera beharko luke:
-# DB_URL=jdbc:mariadb://db:3306/erronka_galduak
-
 docker exec erronka_desktop ping -c 2 db
 ```
+
+### Linux: `cannot open display`
+```bash
+echo $DISPLAY   # :0 edo :1 ikusi beharko zenuke
+xhost +local:docker
+```
+
+### Windows: JavaFX ez da agertzen noVNC-n
+1. Itxaron 20 segundo edukiontziak abiarazi ondoren
+2. URL zuzena: `http://localhost:6080/vnc.html?autoconnect=1&resize=scale`
+3. `docker compose restart java-app`
+
+### Offline modua aktibatu denean
+DB konexiorik ez badago, aplikazioa automatikoki offline moduan abiarazten da `~/.erronka-bermeo/store.dat` fitxategiarekin. Backup egiteko funtzioa ez dago erabilgarri offline moduan.
 
 ---
 
@@ -642,11 +471,11 @@ docker exec erronka_desktop ping -c 2 db
 
 **Erronka taldea** · 1. DAW · 2026
 
-- Yeray Garrido
+- Yeray Garrido Parrayera
 - Eder Martin
 
 **Bezeroa:** Bermeoko Udala · CIFP Zornotza LHII
 
 ---
 
-*Hezkuntza-proiektua. © 2026 Erronka taldea — CIFP Zornotza LHII*
+*Hezkuntza-proiektua © 2026 · CIFP Zornotza LHII*
